--- a/config/settings.json
+++ b/config/settings.json
@@ -1,9 +1,9 @@
 {
-"NomorOwner2":"6289512545999@s.whatsapp.net",
-"NamaOwner":"Ramdani Official",
-"NamaBot":"Jembot_Botz",
-"NomorOwner":"6289512545999",
-"NomorBot":"6289512545999",
+"NomorOwner2":"6285891708874@s.whatsapp.net",
+"NamaOwner":"𝕭𝖔𝖙 • Andii∅ ༢࿔ྀ",
+"NamaBot":"𝕭𝖔𝖙 • Andii∅ ༢࿔ྀ",
+"NomorOwner":"6285891708874",
+"NomorBot":"6285891708874",
 "SessionsName":"sessions",
 "Gayamenu":"•",
 "Prefix":"."
